Added card animations

--- a/client/views/cadastros/cadastros.html
+++ b/client/views/cadastros/cadastros.html
@@ -1,37 +1,86 @@
 <div class="flex flex-wrap">
-    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg hover:bg-grey-dark cursor-pointer">
-        <img class="w-full card-image" src="https://conceptodefinicion.de/wp-content/uploads/2015/02/Cliente-2.jpg" alt="Sunset in the mountains">
+    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg cursor-pointer">
+        <figure class="imghvr-push-up">
+            <img class="w-full card-image" src="https://conceptodefinicion.de/wp-content/uploads/2015/02/Cliente-2.jpg"
+                alt="Sunset in the mountains">
+            <figcaption class="text-center">
+                <button
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    Visualizar Lista
+                </button>
+            </figcaption>
+        </figure>
         <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Controle de Cliente</div>
         </div>
     </div>
-    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg hover:bg-grey-dark cursor-pointer">
-        <img class="w-full card-image" src="http://portaldamineracao.com.br/wp-content/uploads/2018/06/f00058057-890x376.jpg?x73853" alt="Sunset in the mountains">
+    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg cursor-pointer">
+        <figure class="imghvr-push-up">
+            <img class="w-full card-image"
+                src="http://portaldamineracao.com.br/wp-content/uploads/2018/06/f00058057-890x376.jpg?x73853"
+                alt="Sunset in the mountains">
+            <figcaption class="text-center">
+                <button
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    Visualizar Lista
+                </button>
+            </figcaption>
+        </figure>
         <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Controle de Minerio</div>
         </div>
     </div>
-    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg hover:bg-grey-dark cursor-pointer">
-        <img class="w-full card-image" src="https://netscandigital.com/wp-content/uploads/2017/10/documentos-descartar.jpg" alt="Sunset in the mountains">
+    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg cursor-pointer">
+        <figure class="imghvr-push-up">
+            <img class="w-full card-image"
+                src="https://netscandigital.com/wp-content/uploads/2017/10/documentos-descartar.jpg"
+                alt="Sunset in the mountains">
+            <figcaption class="text-center">
+                <button
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    Visualizar Lista
+                </button>
+            </figcaption>
+        </figure>
         <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Controle de Pedidos</div>
         </div>
     </div>
-    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg hover:bg-grey-dark cursor-pointer">
-        <img class="w-full card-image" src="https://www.lmxlogistica.com.br/wp-content/uploads/2016/10/Papel-dos-transportes-na-gest%C3%A3o-log%C3%ADstica.jpg" alt="Sunset in the mountains">
+    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg cursor-pointer">
+        <figure class="imghvr-push-up">
+            <img class="w-full card-image"
+                src="https://www.lmxlogistica.com.br/wp-content/uploads/2016/10/Papel-dos-transportes-na-gest%C3%A3o-log%C3%ADstica.jpg"
+                alt="Sunset in the mountains">
+            <figcaption class="text-center">
+                <button
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    Visualizar Lista
+                </button>
+            </figcaption>
+        </figure>
         <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Controle do Tipo de Veiculo</div>
         </div>
     </div>
-    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg hover:bg-grey-dark cursor-pointer">
-        <img class="w-full card-image" src="https://mundoeducacao.bol.uol.com.br/upload/conteudo_legenda/3ebd751eeeb19d5f4d4a7201627f6d2d.jpg" alt="Sunset in the mountains">
+    <div class="max-w-xs m-4 rounded overflow-hidden shadow-lg cursor-pointer">
+        <figure class="imghvr-push-up">
+            <img class="w-full card-image"
+                src="https://mundoeducacao.bol.uol.com.br/upload/conteudo_legenda/3ebd751eeeb19d5f4d4a7201627f6d2d.jpg"
+                alt="Sunset in the mountains">
+            <figcaption class="text-center">
+                <button
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    Visualizar Lista
+                </button>
+            </figcaption>
+        </figure>
         <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Controle de Veiculo</div>
         </div>
     </div>
 
     <style>
-        .card-image{
+        .card-image {
             width: 320px;
             height: 190px;
         }
