Redesign struct to MVC pattern

--- a/client/views/inicial.html
+++ b/client/views/inicial.html
@@ -8,21 +8,8 @@
             chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
         </canvas>
     </div>
+</div>
 
-    <div class="w-2/5 m-4 rounded overflow-hidden shadow-lg">
-        <div class="container m-4 text-left">
-            <div class="font-bold text-sm">Quantidade de veiculo por tipos</div>
-        </div>
-        <canvas class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series"
-            chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
-        </canvas>
-    </div>
-    <div class="w-2/5 m-4 rounded overflow-hidden shadow-lg">
-        <div class="container m-4 text-left">
-            <div class="font-bold text-sm">Quantidade de pedidos por cliente</div>
-        </div>
-        <canvas class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series"
-            chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
-        </canvas>
-    </div>
+<div class="container mx-auto">
+    <app></app>
 </div>
