--- a/client/views/cadastros/cadastros.html
+++ b/client/views/cadastros/cadastros.html
@@ -22,7 +22,8 @@
                 alt="Sunset in the mountains">
             <figcaption class="text-center">
                 <button
-                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded">
+                    class="bg-transparent hover:bg-blue text-white font-semibold hover:text-white py-2 px-4 border border-blue hover:border-transparent rounded"
+                    ng-click="onView('minerio')">
                     Visualizar Lista
                 </button>
             </figcaption>
