Finished view lists, rendered all entitys

--- a/client/views/pedido/pedido.html
+++ b/client/views/pedido/pedido.html
@@ -1,1 +1,44 @@
-<h1>Pedido Tela</h1>
+<div class="w-2/3 mx-auto" ng-show="pedidos.length > 0" ng-controller="PedidosCtrl">
+    <div class="bg-white shadow-md rounded my-6">
+        <table class="text-left w-full border-collapse">
+            <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
+            <thead>
+                <tr>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Destino</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Cliente</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Minerio</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Quantidade em kg</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Data do Pedido</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="pedido in pedidos" class="hover:bg-grey-lighter">
+                    <td class="py-4 px-6 border-b border-grey-light">{{ pedido.destino }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ pedido.cliente.nome }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ pedido.minerio.nome }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ pedido.quantidade_kg }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ pedido.data_pedido | date : 'dd/MM/yyyy' }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <a href="#"
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Editar</a>
+                        <a href="#"
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Deletar</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
