--- a/client/views/tipo-veiculo/tipo-veiculo.html
+++ b/client/views/tipo-veiculo/tipo-veiculo.html
@@ -14,12 +14,12 @@
             </thead>
             <tbody>
                 <tr ng-repeat="tipoDeveiculo in tipoDeVeiculos" class="hover:bg-grey-lighter">
-                    <td class="py-4 px-6 border-b border-grey-light">{{ tipoDeveiculo.name }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ tipoDeveiculo.nome }}</td>
                     <td class="py-4 px-6 border-b border-grey-light">
                         <a href="#"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Edit</a>
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Editar</a>
                         <a href="#"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Delete</a>
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Deletar</a>
                     </td>
                 </tr>
             </tbody>
