--- a/client/views/minerio/minerio.html
+++ b/client/views/minerio/minerio.html
@@ -1,4 +1,4 @@
-<div class="w-2/3 mx-auto" ng-show="clientes.length > 0" ng-controller="MinerioCtrl">
+<div class="w-2/3 mx-auto" ng-show="minerios.length > 0" ng-controller="MinerioCtrl">
     <div class="bg-white shadow-md rounded my-6">
         <table class="text-left w-full border-collapse">
             <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
@@ -17,11 +17,11 @@
             </thead>
             <tbody>
                 <tr ng-repeat="minerio in minerios" class="hover:bg-grey-lighter">
-                    <td class="py-4 px-6 border-b border-grey-light">{{ minerio.name }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ minerio.nome }}</td>
                     <td class="py-4 px-6 border-b border-grey-light">{{ minerio.valor_grama }}</td>
                     <td class="py-4 px-6 border-b border-grey-light">
                         <a href="#"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Edit</a>
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Editar</a>
                         <a href="#"
                             class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Delete</a>
                     </td>
