--- a/client/views/veiculo/veiculo.html
+++ b/client/views/veiculo/veiculo.html
@@ -1,1 +1,32 @@
-<h1>Veiculo</h1>
+<div class="w-2/3 mx-auto" ng-show="veiculos.length > 0" ng-controller="VeiculosCtrl">
+    <div class="bg-white shadow-md rounded my-6">
+        <table class="text-left w-full border-collapse">
+            <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
+            <thead>
+                <tr>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Id do Veiculo</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Tipo do Veiculo</th>
+                    <th
+                        class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">
+                        Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="veiculo in veiculos" class="hover:bg-grey-lighter">
+                    <td class="py-4 px-6 border-b border-grey-light">{{ veiculo.id_veiculo }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">{{ veiculo.tipoVeiculo.nome }}</td>
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <a href="#"
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Editar</a>
+                        <a href="#"
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Deletar</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
