--- a/client/views/cliente/cliente.html
+++ b/client/views/cliente/cliente.html
@@ -16,8 +16,8 @@
                 <tr ng-repeat="cliente in clientes" class="hover:bg-grey-lighter">
                     <td class="py-4 px-6 border-b border-grey-light">{{ cliente.nome }}</td>
                     <td class="py-4 px-6 border-b border-grey-light">
-                        <a href="#"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark">Editar</a>
+                        <a 
+                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark" ng-click="editar(cliente)" >Editar</a>
                         <a href="#"
                             class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Delete</a>
                     </td>
