Finished components, one graph control

--- a/client/views/inicial.html
+++ b/client/views/inicial.html
@@ -2,9 +2,9 @@
 <div class="flex flex-wrap justify-center" ng-controller="GraphCtrl">
     <div class="w-3/5 m-4 rounded overflow-hidden shadow-lg">
         <div class="container m-4 text-left">
-            <div class="font-bold text-base">Percentual de Minerio por mês</div>
+            <div class="font-bold text-base">Quantidade de veiculos por tipo</div>
         </div>
-        <canvas class="chart chart-radar" chart-data="data" chart-labels="labels" chart-series="series"
+        <canvas class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series"
             chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick">
         </canvas>
     </div>
