--- a/client/views/pedido/pedido.html
+++ b/client/views/pedido/pedido.html
@@ -1,5 +1,11 @@
 <div class="w-2/3 mx-auto" ng-show="pedidos.length > 0" ng-controller="PedidosCtrl">
     <div class="bg-white shadow-md rounded my-6">
+        <div class="flex flex-col items-end">
+            <button ng-click="adicionar()"
+                class="fixed bg-blue-light hover:bg-blue text-white font-bold rounded inline-flex items-center">
+                <i class="material-icons">add_circle_outline</i>
+            </button>
+        </div>
         <table class="text-left w-full border-collapse">
             <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
             <thead>
@@ -33,9 +39,9 @@
                     <td class="py-4 px-6 border-b border-grey-light">{{ pedido.data_pedido | date : 'dd/MM/yyyy' }}</td>
                     <td class="py-4 px-6 border-b border-grey-light">
                         <a ng-click="editar(pedido)"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark cursor-pointer">Editar</a>
-                        <a href="#"
-                            class="text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Deletar</a>
+                            class="cursor-pointer text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-green hover:bg-green-dark cursor-pointer">Editar</a>
+                        <a ng-click="deletar(pedido)"
+                            class="cursor-pointer text-grey-lighter font-bold py-1 px-3 rounded text-xs bg-red hover:bg-red-dark">Deletar</a>
                     </td>
                 </tr>
             </tbody>
