--- a/client/views/minerio/cadastrar.html
+++ b/client/views/minerio/cadastrar.html
@@ -5,7 +5,7 @@
     <input
         class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-grey"
         ng-model="minerio.nome" type="text"
-        placeholder="{{$ctrl.hasAndIsValideEntity() ? $ctrl.entity.nome : 'Digite seu nome'}}" required>
+        placeholder="{{$ctrl.hasAndIsValideEntity() ? $ctrl.entity.nome : 'Digite o nome do minerio'}}" required>
     <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-last-name">
         Valor Da Grama
     </label>
