--- a/client/views/tipo-veiculo/cadastrar.html
+++ b/client/views/tipo-veiculo/cadastrar.html
@@ -1,25 +1,14 @@
 <form ng-show="$ctrl.entity" class="w-full max-w-md">
-    <dropdown ng-model="pedido.cliente" on-select="pedido.cliente = change" path="clientes" ></dropdown>
-    <dropdown ng-model="pedido.veiculo" on-select="pedido.veiculo = change" path="veiculos" ></dropdown>
-    <dropdown ng-model="pedido.minerio" on-select="pedido.minerio = change" path="minerios" ></dropdown>
     <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-last-name">
-        Destino
+        Nome
     </label>
     <input
         class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-        ng-model="pedido.destino" type="text"
-        placeholder="{{$ctrl.hasAndIsValideEntity() ? $ctrl.entity.destino : 'Digite o destino'}}" required>
-    <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-last-name">
-        Quantidade em Kilogramas
-    </label>
-    <input
-        class="appearance-none block w-full bg-grey-lighter text-grey-darker border border-grey-lighter rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-grey"
-        ng-model="pedido.quantidade_kg" type="number"
-        placeholder="{{$ctrl.hasAndIsValideEntity() ? $ctrl.entity.quantidade_kg : 'Digite o peso em Quantidade'}}" required>
-
+        ng-model="tipoDeVeiculo.nome" type="text"
+        placeholder="{{$ctrl.hasAndIsValideEntity() ? $ctrl.entity.nome : 'Digite o nome'}}" required>
     <div class="flex m-4 content-between">
         <button type="submit" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full"
-            ng-click="$ctrl.salvar(pedido)">
+            ng-click="$ctrl.salvar(tipoDeVeiculo)">
             {{ $ctrl.hasAndIsValideEntity() ? 'Salvar' : 'Cadastrar' }}
         </button>
         <button type="button" class="bg-blue hover:bg-blue-dark text-white font-bold ml-4 py-2 px-4 rounded-full"
@@ -27,10 +16,6 @@
             Voltar
         </button>
     </div>
-
-    <pre>
-        {{ pedido| json }}
-    </pre>
 </form>
 <div ng-show="!$ctrl.entity" role="alert">
     <div class="bg-red text-white font-bold rounded-t px-4 py-2">
