--- a/client/views/sobre.html
+++ b/client/views/sobre.html
@@ -1,1 +1,23 @@
-<h1>Tela Sobre</h1>
+<div class="bg-white m-16 mx-auto max-w-sm shadow-lg rounded-lg overflow-hidden">
+    <div class="sm:flex sm:items-center px-6 py-4">
+      <img class="block h-16 sm:h-24 rounded-full mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://avatars1.githubusercontent.com/u/28971222?s=460&v=4" alt="">
+      <div class="text-center sm:text-left sm:flex-grow">
+        <div class="mb-4">
+          <p class="text-xl leading-tight">Carlos Gabriel</p>
+          <p class="text-sm leading-tight text-grey-dark">Front End Developer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="sm:flex sm:items-center px-6 py-4">
+        <img class="block h-16 sm:h-24 rounded-full mx-auto mb-4 sm:mb-0 sm:mr-4 sm:ml-0" src="https://avatars0.githubusercontent.com/u/1486684?s=460&v=4" alt="">
+        <div class="text-center sm:text-left sm:flex-grow">
+          <div class="mb-4">
+            <p class="text-xl leading-tight">Daniel Junior</p>
+            <p class="text-sm leading-tight text-grey-dark">Back End Developer.</p>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <!-- https://avatars1.githubusercontent.com/u/28971222?s=460&v=4 --> <!-- carlos -->
+  <!-- https://avatars0.githubusercontent.com/u/1486684?s=460&v=4 --> <!-- Daniel -->
