--- a/client/views/pedido/cadastrar.html
+++ b/client/views/pedido/cadastrar.html
@@ -1,4 +1,4 @@
-<form ng-show="$ctrl.entity" class="w-full max-w-md">
+<form class="w-full max-w-md">
     <dropdown ng-model="pedido.cliente" on-select="pedido.cliente = change" path="clientes" ></dropdown>
     <dropdown ng-model="pedido.veiculo" on-select="pedido.veiculo = change" path="veiculos" ></dropdown>
     <dropdown ng-model="pedido.minerio" on-select="pedido.minerio = change" path="minerios" ></dropdown>
@@ -28,11 +28,3 @@
         </button>
     </div>
 </form>
-<div ng-show="!$ctrl.entity" role="alert">
-    <div class="bg-red text-white font-bold rounded-t px-4 py-2">
-        Erro
-    </div>
-    <div class="border border-t-0 border-red-light rounded-b bg-red-lightest px-4 py-3 text-red-dark">
-        <p>Volte a lista e selecione uma entidade.</p>
-    </div>
-</div>
