--- a/client/views/tipo-veiculo/cadastrar.html
+++ b/client/views/tipo-veiculo/cadastrar.html
@@ -1,4 +1,4 @@
-<form ng-show="$ctrl.entity" class="w-full max-w-md">
+<form class="w-full max-w-md">
     <label class="block uppercase tracking-wide text-grey-darker text-xs font-bold mb-2" for="grid-last-name">
         Nome
     </label>
@@ -17,11 +17,3 @@
         </button>
     </div>
 </form>
-<div ng-show="!$ctrl.entity" role="alert">
-    <div class="bg-red text-white font-bold rounded-t px-4 py-2">
-        Erro
-    </div>
-    <div class="border border-t-0 border-red-light rounded-b bg-red-lightest px-4 py-3 text-red-dark">
-        <p>Volte a lista e selecione uma entidade.</p>
-    </div>
-</div>
